--- a/data/答疑.tex
+++ b/data/答疑.tex
@@ -6,7 +6,9 @@
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width=.5\linewidth]{smalltruck.jpg}
-    \caption{汽车上的万向节，可以观察身边的小货车}
+    \subfloat[汽车上的万向节，可以观察身边的小货车]{\includegraphics[height=5cm]{smalltruck}}
+    \hfill
+    \subfloat[拖把上也有虎克铰]{\includegraphics[height=5cm]{swob}}
+    \caption{生活中的虎克铰}
 \end{figure}
 
